inventory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '["inventory-database",{"apiVersion":"apps/v1","kind":"Deployment","name":"inventory-database"}]'
  labels:
    app: inventory
    app.kubernetes.io/component: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/part-of: inventory
    app.openshift.io/runtime: quarkus
  name: inventory
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/part-of: inventory
      app.openshift.io/runtime: quarkus
      deployment: inventory
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: inventory
        app.openshift.io/runtime: quarkus
        deployment: inventory
    spec:
      containers:
      - env:
        - name: quarkus.datasource.driver
          value: org.postgresql.Driver
        - name: quarkus.datasource.password
          value: inventory
        - name: quarkus.datasource.url
          value: jdbc:postgresql://inventory-database:5432/inventory
        - name: quarkus.datasource.username
          value: inventory
        - name: QUARKUS_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              key: quarkus.datasource.username
              name: inventory
        - name: QUARKUS_DATASOURCE_DRIVER
          valueFrom:
            secretKeyRef:
              key: quarkus.datasource.driver
              name: inventory
        - name: QUARKUS_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: quarkus.datasource.password
              name: inventory
        - name: QUARKUS_DATASOURCE_URL
          valueFrom:
            secretKeyRef:
              key: quarkus.datasource.url
              name: inventory
        image: image-registry.openshift-image-registry.svc:5000/wkosp-coolstore/inventory:dev-31
        imagePullPolicy: IfNotPresent
        name: inventory
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
